@@ -450,7 +450,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = src/hocr.h  src/hocr_object.h  src/hocr_pixbuf.h  src/hocr_textbuffer.h
+INPUT                  = src/hocr.h  src/hocr_pixbuf.h  src/hocr_textbuffer.h
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
