@@ -5,6 +5,7 @@ EXTRA_DIST = \
 	hocr-qt/hocr_qt.cpp \
 	hocr-qt/hocr_qt.h \
 	hocr-qt/main.cpp \
-	bindings/python/hocr_py.py
+	bindings/python/hocr_py.py \
+	bindings/perl/hocr_perl.pl
 
 SUBDIRS = hocr-gtk hocr
